// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with accessibility props 1`] = `
<View
  accessibilityLabel="Keyboard avoiding sticky container"
  accessible={true}
  className="flex-1 px-[16px]"
  testID="keyboard-avoiding-sticky-view"
>
  Content
</View>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with all props combined 1`] = `
<RNCSafeAreaView
  className="flex-1 px-0"
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
>
  <View
    accessibilityLabel="Custom keyboard avoiding sticky view"
    accessible={true}
    className="flex-grow px-[24px] flex-grow flex-none custom-class"
    enabled={true}
    offset={
      {
        "close": 0,
        "open": 20,
      }
    }
    style={
      {
        "marginBottom": 16,
      }
    }
    testID="keyboard-avoiding-sticky-view"
  >
    Content
  </View>
</RNCSafeAreaView>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with basic props 1`] = `
<View
  className="flex-1 px-[16px]"
>
  Content
</View>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with custom className 1`] = `
<View
  className="flex-1 px-[16px] custom-class"
>
  Content
</View>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with custom style 1`] = `
<View
  className="flex-1 px-[16px]"
  style={
    {
      "marginBottom": 8,
    }
  }
>
  Content
</View>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with edges prop 1`] = `
<RNCSafeAreaView
  className="flex-1 px-0"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
>
  <View
    className="flex-1 px-[16px]"
  >
    Content
  </View>
</RNCSafeAreaView>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with enabled prop 1`] = `
<View
  className="flex-1 px-[16px]"
  enabled={false}
>
  Content
</View>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with fill prop 1`] = `
<View
  className="flex-1 px-[16px]"
>
  Content
</View>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with grow prop 1`] = `
<View
  className="flex-grow px-[16px] flex-grow flex-none"
>
  Content
</View>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with hasSafeArea prop 1`] = `
<RNCSafeAreaView
  className="flex-1 px-0"
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
>
  <View
    className="flex-1 px-[16px]"
  >
    Content
  </View>
</RNCSafeAreaView>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with offset prop 1`] = `
<View
  className="flex-1 px-[16px]"
  offset={
    {
      "close": 0,
      "open": 20,
    }
  }
>
  Content
</View>
`;

exports[`WrapperKeyboardAvoidingStickyView Snapshots should match snapshot with px prop 1`] = `
<View
  className="flex-1 px-[16px]"
>
  Content
</View>
`;
